--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ chrono = { version = "0.4", features = ["serde"] }
 # Collections and utilities
 dashmap = "6.0"
 uuid = { version = "1.0", features = ["v4", "serde"] }
+url = "2.4"
 
 # Configuration
 config = "0.14"
