--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,17 +2,28 @@
 name = "garbagetruck"  
 version = "0.1.0"
 edition = "2021"
+authors = ["Ronan Takizawa <ronantakizawa@gmail.com>"]
 description = "A lease-based garbage collection sidecar for distributed systems"
 license = "MIT"
-repository = "https://github.com/your-org/garbagecollector" 
+readme = "README.md"
+homepage = "https://github.com/ronantakizawa/garbagetruck"
+repository = "https://github.com/ronantakizawa/garbagetruck" 
+documentation = "https://docs.rs/garbagetruck"
 keywords = ["grpc", "gc", "sidecar", "microservices", "lease"]
-categories = ["network-programming", "development-tools"]
-
+categories = ["network-programming", "development-tools", "command-line-utilities"]
+exclude = [
+    "target/",
+    ".git/",
+    ".github/",
+    "docker/",
+    "scripts/",
+    "benchmarks/",
+    "*.log"
+]
 
 [lib]
 name = "garbagetruck"
 path = "src/lib.rs"
-
 
 [dependencies]
 # gRPC and protobuf
@@ -48,13 +59,13 @@ url = "2.4"
 # Configuration
 config = "0.14"
 
-# Database (with postgres feature enabled by default)
+# Database (optional)
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"], optional = true }
 
 # Metrics
 prometheus = "0.13"
 
-# Tower for middleware (only what we need)
+# Tower for middleware
 tower = { version = "0.4", features = ["util"] }
 
 # Error handling
@@ -64,8 +75,8 @@ thiserror = "1.0"
 # Client-specific dependencies
 fastrand = "2.0"
 
-# CLI dependencies
-clap = { version = "4.4", features = ["derive", "env"] }
+# CLI dependencies (optional)
+clap = { version = "4.4", features = ["derive", "env"], optional = true }
 
 [dev-dependencies]
 # Testing framework
@@ -76,15 +87,8 @@ tempfile = "3.8"
 warp = "0.3"
 
 # Additional utilities for testing
-uuid = { version = "1.0", features = ["v4"] }
-serde_json = "1.0"
-
-# For integration tests
-tonic = { version = "0.12", features = ["transport"] }
-
-# Test utilities
 pretty_assertions = "1.4"
-serial_test = "3.0"  # For tests that need to run sequentially
+serial_test = "3.0"
 
 # Performance testing
 criterion = { version = "0.5", features = ["html_reports"] }
@@ -93,18 +97,19 @@ criterion = { version = "0.5", features = ["html_reports"] }
 tonic-build = "0.12"
 
 [features]
-# Enable postgres by default, make it optional for builds without database
-default = ["grpc"]
-grpc = []
-postgres = ["sqlx/postgres", "sqlx/runtime-tokio-native-tls"]
-client = []
+default = ["client"]
+client = ["clap"]
+server = []
+postgres = ["sqlx"]
+full = ["client", "server", "postgres"]
 
-# Main server binary
+# Server binary
 [[bin]]
 name = "garbagetruck-server"
-path = "src/bin/main.rs"
+path = "src/bin/server/main.rs"
+required-features = ["server"]
 
-# CLI binary (primary interface)
+# CLI binary  
 [[bin]]
 name = "garbagetruck"
 path = "src/bin/cli/main.rs"
@@ -114,8 +119,12 @@ required-features = ["client"]
 name = "benchmark"
 harness = false
 
-# Examples
 [[example]]
 name = "client_usage"
 path = "examples/client_usage.rs"
 required-features = ["client"]
+
+[[example]]
+name = "server_setup"
+path = "examples/server_setup.rs"
+required-features = ["server"]
