--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ readme = "README.md"
 homepage = "https://github.com/ronantakizawa/garbagetruck"
 repository = "https://github.com/ronantakizawa/garbagetruck" 
 documentation = "https://docs.rs/garbagetruck"
-keywords = ["grpc", "gc", "sidecar", "microservices", "lease", "persistent", "recovery"]
-categories = ["network-programming", "development-tools", "command-line-utilities"]
+keywords = ["distributedsystems", "garbagecollection", "sidecar", "microservices", "lease"]
+categories = [ "distributed-systems","garbage-collection", "development-tools"]
 exclude = [
     "target/",
     ".git/",
