--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ homepage = "https://github.com/ronantakizawa/garbagetruck"
 repository = "https://github.com/ronantakizawa/garbagetruck" 
 documentation = "https://docs.rs/garbagetruck"
 keywords = ["distributedsystems", "garbagecollection", "sidecar", "microservices", "lease"]
-categories = [ "distributed-systems","garbage-collection", "development-tools"]
+categories = ["network-programming", "development-tools", "distributed-systems"]
 exclude = [
     "target/",
     ".git/",
